--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,15 @@
           <artifactId>log4j</artifactId>
         </exclusion>
       </exclusions>
+      <scope>provided</scope>
     </dependency>
 
+    <!--Hbase MapReduce-->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-server</artifactId>
+      <version>${hbase.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -107,7 +114,7 @@
                 <transformer
                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>com.basic.storm.topology.keyGroupingBalancingTopology</Main-Class>
+                    <!--<Main-Class>com.basic.storm.topology.keyGroupingBalancingTopology</Main-Class>-->
                   </manifestEntries>
                 </transformer>
               </transformers>
